hphp/hack/test/typecheck/vec_const.php.exp
File "vec_const.php", line 7, characters 62-69:
Expected constant expression for initializer (Parsing[1002])
File "vec_const.php", line 7, characters 62-69:
Illegal constant value (Naming[2023])
